--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" href="./assets/icons/dry-fruits.webp" />
     <link rel="stylesheet" href="./main.css" />
     <title>Oziq-ovqat mahsulotlari katalogi</title>
   </head>
