--- a/index.html
+++ b/index.html
@@ -8,107 +8,105 @@
     <title>Oziq-ovqat mahsulotlari katalogi</title>
   </head>
   <body>
-    <div class="overlay">
-      <div class="dark-layer"></div>
-    </div>
+    <div class="wrapper">
+      <div class="catalog">
+        <h1 class="title">Oziq-ovqat mahsulotlari katalogi</h1>
 
-    <div class="catalog">
-      <h1 class="title">Oziq-ovqat mahsulotlari katalogi</h1>
+        <div class="product">
+          <h2 class="second-title">1. Keshyu yong'og'i</h2>
+          <div class="images">
+            <img src="./assets/images/gaje.jpg" alt="" />
+          </div>
+          <div class="prices">
+            <p><strong>250g:</strong> __ so‘m</p>
+            <p><strong>500g:</strong> __ so‘m</p>
+            <p><strong>750g:</strong> __ so‘m</p>
+            <p><strong>1000g:</strong> __ so‘m</p>
+          </div>
+          <div class="benefits">
+            ✅ Miqdor cheklanmagan<br />
+            ✅ Yetkazib berish mavjud<br />
+            ✅ Bozordan arzon<br />
+            ⭐️ Sog‘lom yog‘lar, yurak uchun foydali<br />
+            ⭐️ Antioksidantlarga boy, energiya beradi
+          </div>
+        </div>
 
-      <div class="product">
-        <h2 class="second-title">1. Keshyu yong'og'i</h2>
-        <div class="images">
-          <img src="./assets/images/gaje.jpg" alt="" />
+        <div class="product">
+          <h2 class="second-title">2. Bodom yong‘og‘i (variant 1)</h2>
+          <div class="images">
+            <img src="./assets/images/bodom-2.jpg" alt="" />
+          </div>
+          <div class="prices">
+            <p><strong>250g:</strong> __ so‘m</p>
+            <p><strong>500g:</strong> __ so‘m</p>
+            <p><strong>750g:</strong> __ so‘m</p>
+            <p><strong>1000g:</strong> __ so‘m</p>
+          </div>
+          <div class="benefits">
+            ✅ Miqdor cheklanmagan<br />
+            ✅ Yetkazib berish mavjud<br />
+            ✅ Bozordan arzon<br />
+            ⭐️ Protein va tolaga boy<br />
+            ⭐️ Yurak va miya faoliyatini qo‘llab-quvvatlaydi
+          </div>
         </div>
-        <div class="prices">
-          <p><strong>250g:</strong> __ so‘m</p>
-          <p><strong>500g:</strong> __ so‘m</p>
-          <p><strong>750g:</strong> __ so‘m</p>
-          <p><strong>1000g:</strong> __ so‘m</p>
-        </div>
-        <div class="benefits">
-          ✅ Miqdor cheklanmagan<br />
-          ✅ Yetkazib berish mavjud<br />
-          ✅ Bozordan arzon<br />
-          ⭐️ Sog‘lom yog‘lar, yurak uchun foydali<br />
-          ⭐️ Antioksidantlarga boy, energiya beradi
-        </div>
-      </div>
 
-      <div class="product">
-        <h2 class="second-title">2. Bodom yong‘og‘i (variant 1)</h2>
-        <div class="images">
-          <img src="./assets/images/bodom-2.jpg" alt="" />
+        <div class="product">
+          <h2 class="second-title">3. Bodom yong‘og‘i (variant 2)</h2>
+          <div class="images">
+            <img src="./assets/images/bodom.jpg" alt="" />
+          </div>
+          <div class="prices">
+            <p><strong>250g:</strong> __ so‘m</p>
+            <p><strong>500g:</strong> __ so‘m</p>
+            <p><strong>750g:</strong> __ so‘m</p>
+            <p><strong>1000g:</strong> __ so‘m</p>
+          </div>
+          <div class="benefits">
+            ✅ Miqdor cheklanmagan<br />
+            ✅ Yetkazib berish mavjud<br />
+            ✅ Bozordan arzon<br />
+            ⭐️ Protein va tolaga boy<br />
+            ⭐️ Yurak va miya faoliyatini qo‘llab-quvvatlaydi
+          </div>
         </div>
-        <div class="prices">
-          <p><strong>250g:</strong> __ so‘m</p>
-          <p><strong>500g:</strong> __ so‘m</p>
-          <p><strong>750g:</strong> __ so‘m</p>
-          <p><strong>1000g:</strong> __ so‘m</p>
-        </div>
-        <div class="benefits">
-          ✅ Miqdor cheklanmagan<br />
-          ✅ Yetkazib berish mavjud<br />
-          ✅ Bozordan arzon<br />
-          ⭐️ Protein va tolaga boy<br />
-          ⭐️ Yurak va miya faoliyatini qo‘llab-quvvatlaydi
-        </div>
-      </div>
 
-      <div class="product">
-        <h2 class="second-title">3. Bodom yong‘og‘i (variant 2)</h2>
-        <div class="images">
-          <img src="./assets/images/bodom.jpg" alt="" />
+        <div class="product">
+          <h2 class="second-title">4. Pistachka yong‘og‘i</h2>
+          <div class="images">
+            <img src="./assets/images/dane.jpg" alt="" />
+          </div>
+          <div class="prices">
+            <p><strong>250g:</strong> __ so‘m</p>
+            <p><strong>500g:</strong> __ so‘m</p>
+            <p><strong>750g:</strong> __ so‘m</p>
+            <p><strong>1000g:</strong> __ so‘m</p>
+          </div>
+          <div class="benefits">
+            ✅ Miqdor cheklanmagan<br />
+            ✅ Yetkazib berish mavjud<br />
+            ✅ Bozordan arzon<br />
+            ⭐️ Ko‘p miqdorda antioksidantlar va vitaminlar<br />
+            ⭐️ Hazm qilishni yaxshilaydi, energiya manbai
+          </div>
         </div>
-        <div class="prices">
-          <p><strong>250g:</strong> __ so‘m</p>
-          <p><strong>500g:</strong> __ so‘m</p>
-          <p><strong>750g:</strong> __ so‘m</p>
-          <p><strong>1000g:</strong> __ so‘m</p>
+        <div class="contact">
+          <p>
+            <a target="_blank" href="tel:90.128_86_21"
+              >Tel: 90.128_86_21, ABDUVOXID</a
+            >
+          </p>
+          <p>
+            <a target="_blank" href="https://t.me/abduvoxid99"
+              >Telegram: @abduvoxid99</a
+            >
+          </p>
+          <p style="font-size: 0.9em; color: #555">
+            Ish vaqti: 08:00 - 18:00, Yetkazib berish: 24 soat, Miqdor
+            cheklanmagan
+          </p>
         </div>
-        <div class="benefits">
-          ✅ Miqdor cheklanmagan<br />
-          ✅ Yetkazib berish mavjud<br />
-          ✅ Bozordan arzon<br />
-          ⭐️ Protein va tolaga boy<br />
-          ⭐️ Yurak va miya faoliyatini qo‘llab-quvvatlaydi
-        </div>
-      </div>
-
-      <div class="product">
-        <h2 class="second-title">4. Pistachka yong‘og‘i</h2>
-        <div class="images">
-          <img src="./assets/images/dane.jpg" alt="" />
-        </div>
-        <div class="prices">
-          <p><strong>250g:</strong> __ so‘m</p>
-          <p><strong>500g:</strong> __ so‘m</p>
-          <p><strong>750g:</strong> __ so‘m</p>
-          <p><strong>1000g:</strong> __ so‘m</p>
-        </div>
-        <div class="benefits">
-          ✅ Miqdor cheklanmagan<br />
-          ✅ Yetkazib berish mavjud<br />
-          ✅ Bozordan arzon<br />
-          ⭐️ Ko‘p miqdorda antioksidantlar va vitaminlar<br />
-          ⭐️ Hazm qilishni yaxshilaydi, energiya manbai
-        </div>
-      </div>
-      <div class="contact">
-        <p>
-          <a target="_blank" href="tel:90.128_86_21"
-            >Tel: 90.128_86_21, ABDUVOXID</a
-          >
-        </p>
-        <p>
-          <a target="_blank" href="https://t.me/abduvoxid99"
-            >Telegram: @abduvoxid99</a
-          >
-        </p>
-        <p style="font-size: 0.9em; color: #555">
-          Ish vaqti: 08:00 - 18:00, Yetkazib berish: 24 soat, Miqdor
-          cheklanmagan
-        </p>
       </div>
     </div>
   </body>
